# Mail_ocr_2

./: .gitignore  OCR.yaml  PP-StructureV3.yaml  README.md  compare.txt  pyproject.toml  test_pipeline_onnx_obb.ipynb  test_pipeline_server.ipynb
VnPost/Hai/utils/: a.ipynb  onnx_infer.py  onnx_infer_obb.py  utility.py
VnPost/Server/utils/: inference.py  inference_obb.py  utility.py
