[project]
name = "mail-ocr-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "onnxruntime>=1.22.1",
    "opencv-python-headless<=4.11.0.86",
    "ultralytics>=8.3.198",
    "paddlepaddle==3.0.0",
    "paddleocr[doc-parser]>=3.2.0",
    "onnx>=1.19.0",
    "einops>=0.8.1",
    "shapely>=2.1.1",
]

[project.optional-dependencies]
cpu = ["paddlepaddle==3.0.0"]

[tool.uv.sources]
paddlepaddle = [{ index = "paddlepaddle-cpu", extra = "cpu" }]

[[tool.uv.index]]
name = "paddlepaddle-cpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true
